Bug 35991 - merged cells in TABLES in .doc files not saved correctly by Writer
Summary: merged cells in TABLES in .doc files not saved correctly by Writer
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:3.7.0 target:3.5.8 target:3.6.4
Keywords:
: 39113 (view as bug list)
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2011-04-05 07:40 UTC by sasha.libreoffice
Modified: 2012-11-18 13:04 UTC (History)
11 users (show)

See Also:
Crash report or crash signature:


Attachments
document with merged cell created by MSword2003, opens OK (25.00 KB, application/msword)
2011-04-06 07:38 UTC, sasha.libreoffice
Details
document saved by Writer, merged cell lost (11.00 KB, application/msword)
2011-04-06 07:42 UTC, sasha.libreoffice
Details
when saving in LO the merged cells are no longer merged and picture decreased in 3.4.0/1RC3 (328.00 KB, application/msword)
2011-06-30 14:12 UTC, hirt
Details
Screenshots for bug 35991, step by step (198.46 KB, image/png)
2012-10-09 09:51 UTC, Roman Eisele
Details
Test file created according to comment 17 with LibO 3.6.2.2 on Mac OS X 10.6.8 (11.00 KB, application/msword)
2012-10-09 09:53 UTC, Roman Eisele
Details
Test file for bug 35991 comment 17 after step 5 opened in MSO 2010 (151.00 KB, image/png)
2012-10-09 10:19 UTC, Roman Eisele
Details
Screen capture showing loss of merged cells (85.55 KB, image/png)
2012-10-10 23:16 UTC, Loz Saunders
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sasha.libreoffice 2011-04-05 07:40:42 UTC
When table in Writer have merged cells and we save document in doc format and then open it again, cells become unmerged. This problem is on Linux 64 bit. On windows 32bit it works properly.
To reproduce this problem:
 - start Writer with new empty document.
 - create table with 2 columnt and some rows
 - select some cells in one column(important that in one column) and merge them
 - save file in doc format
 - use File->Reload. Cells become unmerged.

Writer do not saves merged cells and do not loads them.

produced on Mandriva 64 bit with LibreOffice 3.3.2
Comment 1 tester8 2011-04-06 05:06:59 UTC
Strange.
Not reproduced with
LibreOffice 3.3.2 RC2 (1:3.3.0-1lucid1) - Ubuntu 10.04 x86 Linux 2.6.32-30-generic Russian UI
Comment 2 sasha.libreoffice 2011-04-06 07:38:10 UTC
Created attachment 45345 [details]
document with merged cell created by MSword2003, opens OK
Comment 3 sasha.libreoffice 2011-04-06 07:42:43 UTC
Created attachment 45346 [details]
document saved by Writer, merged cell lost

I have added 2 files:
One from Word. It opens in Writer OK.
Second from Writer. Merged cell lost.

To produce second file I have opened it by Writer and saved under another name
Comment 4 Loz Saunders 2011-06-13 11:39:25 UTC
(In reply to comment #0)
> When table in Writer have merged cells and we save document in doc format and
> then open it again, cells become unmerged. This problem is on Linux 64 bit. On
> windows 32bit it works properly.
> To reproduce this problem:
>  - start Writer with new empty document.
>  - create table with 2 columnt and some rows
>  - select some cells in one column(important that in one column) and merge them
>  - save file in doc format
>  - use File->Reload. Cells become unmerged.
> 
> Writer do not saves merged cells and do not loads them.
> 
> produced on Mandriva 64 bit with LibreOffice 3.3.2

I can confirm that I have the same problem on two machines running Ubuntu 11.04 64 bit.
Comment 5 hirt 2011-06-30 14:12:01 UTC
Created attachment 48620 [details]
when saving in LO the merged cells are no longer merged and picture decreased in 3.4.0/1RC3
Comment 6 bmalkov 2011-11-28 04:28:50 UTC
Version 3.4.4 64 bit, the bug still remains.
Comment 7 Björn Michaelsen 2011-12-23 11:52:44 UTC
[This is an automated message.]
This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it
started right out as NEW without ever being explicitly confirmed. The bug is
changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back
to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases.
Details on how to test the 3.5.0 beta1 can be found at:
http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1

more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Comment 8 sasha.libreoffice 2011-12-28 02:50:07 UTC
reproduced on LibO 3.5.0 beta 1
(only if create document from scratch, on files from attachment not reproduced)
Comment 9 Chris Peñalver 2011-12-30 14:58:25 UTC
sasha.libreoffice@gmail.com, please do not toggle the Version. For more on this please see: http://wiki.documentfoundation.org/BugReport_Details#Version
Comment 10 sasha.libreoffice 2012-01-01 22:23:15 UTC
Thanks for link with explanation. Previously I thought that there should be last reproducible version. Now I know that there placed first version where bug appears.
Comment 11 Timur 2012-08-30 11:02:19 UTC
Yes, it's very similar to Bug 54259, probably the same cause. 
Except that you say "This problem is on Linux 64 bit. On windows 32bit it works properly." I had a problem on Windows 7 Sp1 64bit, while on Ubuntu 32bit it looked fine. It's a little bit strange. 
Please add this one to 3.5. MAB, it's only in text, not in MAB.
Comment 12 Timur 2012-08-31 11:03:15 UTC
can you please test with https://bugs.freedesktop.org/attachment.cgi?id=66327 so that we confirm if this is a duplicate of Bug 54259?
Comment 13 sasha.libreoffice 2012-09-04 06:00:56 UTC
reproduced problem with attachment in previous comment on 3.6.1 on Fedora 64 bit and in 3.6.0rc on Windows XP 32 bit. Merging lost during saving to doc.

Additional: experiments shows that lost are merging in column. If we select some cell in one column, merge them and save to doc, then merging will be lost. But merging several cells in one row will not lost.
Comment 14 sasha.libreoffice 2012-09-28 09:11:37 UTC
*** Bug 39113 has been marked as a duplicate of this bug. ***
Comment 15 Roman Eisele 2012-10-09 08:21:41 UTC
Given that bug 54259 was (a) new in LibreOffice 3.6.x and (b) seems fixed now, both just like bug 54862, it seems clear that the present bug, which is much older (LibreOffice 3.3), is *not* the same issue as bug 54259. We have two independent issues here; and it is possible that the present issue is really confined to the Linux platform, as the first reporters stated.

Can someone who knows the present issue well please confirm if it is still reproducible in a current LibreOffice 3.6.3 daily (or master daily) build? You can download them from

http://dev-builds.libreoffice.org/daily/

Thank you very much!
Comment 16 Roman Eisele 2012-10-09 08:36:03 UTC
... and it may be best to try this on Linux, because I can not reproduce this issue on Mac OS X with LibreOffice 3.6.2.2 or a current 3.7 daily build.
Comment 17 sasha.libreoffice 2012-10-09 09:17:18 UTC
reproduced in 3.6.2.2 on Fedora 64 bit
steps to reproduce:
1. Start Writer, create new document
2. Insert table 4X4 cells
3. Select 2X2 cells area in middle of table and merge
4. Save as doc format
5. File->reload
Comment 18 Roman Eisele 2012-10-09 09:51:16 UTC
Created attachment 68322 [details]
Screenshots for bug 35991, step by step

@ Sasha:
Thank you very much for reproducing -- and for the steps to reproduce!

Using them, I can also REPRODUCE this issue on Mac OS X 10.6.8 (Intel) with LibO 3.6.2.2 (I did not succeed with similar, but slightly different steps!). So the problem is NOT limited to Linux, as I assumed.

The attached screenshots show the sample document created according to Sasha’s description (comment #17), after step 2, step 3 (correct), and step 5 (wrong).
Comment 19 Roman Eisele 2012-10-09 09:53:34 UTC
Created attachment 68323 [details]
Test file created according to comment 17 with LibO 3.6.2.2 on Mac OS X 10.6.8

Test file created according to comment 17 with LibO 3.6.2.2 on Mac OS X 10.6.8,
i.e. after the final step 5. Exactly this file is visible on the screenshots.
Comment 20 Roman Eisele 2012-10-09 10:19:13 UTC
Created attachment 68324 [details]
Test file for bug 35991 comment 17 after step 5 opened in MSO 2010



Ah, and when I open the test .doc file created according to Sasha’s steps (comment 17) in MS Office 2010 (on Windows 7), the table is correct again --
see the attached screenshot.

IMHO this indicates that this is a FILEOPEN, not a FILESAVE problem: the .doc file created by LibO is (mostly?) correct, but LibO itself does not open it correctly again.
Comment 21 Roman Eisele 2012-10-09 10:31:01 UTC
@ Cédric Bosdonnat,
@ Michael Stahl:

Now that this issue is separated from similar issues (bug 54259 etc.) and confirmed as still reproducible, at least on Fedora and Mac OS, with some easy steps to reproduce it and some additional hints added, could you find some time to look into it? We all know that you have got much other important work, but there is a good chance that this bug affects quite some documents out there, so this bug seems quite important.

Thank you very much!


*

Adapted the summary according to test results (FILEOPEN, not FILESAVE problem).
Also, right now confirmed for 64bit only.
Comment 22 Roman Eisele 2012-10-09 10:45:40 UTC
Wait a minute -- sorry sorry sorry!

Right after hitting “Save Changes”, I realized that I have made a big mistake. Until comment #16, everything is fine; but then, why did I not realize that I made just the error which I wanted to prevent with my comment #15? It must be cold -- one should not do bug wrangling with headaches ;-)

The steps given in comment #17 show the bug in LibO 3.6.2.2 and in LOdev until ca. 2012-09-30, but this issue is NO LONGER REPRODUCIBLE with LOdev 3.7.0.0.alpha0+ pull time 2012-10-04 12.52.50. With this master build, which includes the fix for bug 54259 and bug 54862, the cells remain merged after step #5 in comment #17, and the .doc file is shown correctly now.

Therefore, what the test from comment #17 and my screenshots and sample files show is just again the same issue about LibO 3.6.0-3.6.2 as in bug 54259 and bug 54862, and both are fixed now.

    **** So please ignore comment #18 to comment #21! ****

What we still need is a way to reproduce this issue clearly in a *current* LibreOffice 3.6.3 daily (or 3.7/master daily) build, just as I stated in comment #17. If someone manages to reproduce it there, we know that this issue still exists.

Reset Summary and Platform.

    *

@ Cédric Bosdonnat, Michael Stahl:

I am very sorry for wasting your time! Nothing is to do about this issue until someone can confirm that it still exists.
Comment 23 Loz Saunders 2012-10-10 23:09:19 UTC
I can confirm the issue persists. Linux (Ubuntu 12.10), LibreOffice Version 3.6.2.2

Following the steps in comment #17, the adjacent cells in the rows remain merged but the column reverts to separate columns.
Comment 24 Loz Saunders 2012-10-10 23:16:19 UTC
Created attachment 68426 [details]
Screen capture showing loss of merged cells

Screen capture illustrating loss of merge in columns but not rows, as described in comment #23
Comment 25 Roman Eisele 2012-10-11 07:45:26 UTC
@ Loz Saunders
(and @ all):

Thank you very much for testing! However, I am sorry to say so, but your test suffers from the same error which I have made in my comments 18 to 21 ;-).

If we test with LibreOffice 3.6.2.2, as I did and you did, we may very well just reproduce bug 54862 (a regression introduced in LibO 3.6.x). What we need to find out is if *this* special issue, which has similar symptoms as bug 54862, but is far older and possibly limited to Linux, is still reproducible.

To clarify this, we need to test with a version of LibreOffice in which bug 54862 is already fixed; i.e., either with a LibreOffice Master (3.7) build made after 2012-10-01 23:12:04 UTC, or with a LibreOffice 3.6 daily build made after 2012-10-02 10:57:30 UTC.

You can download these daily builds from
  http://dev-builds.libreoffice.org/daily/

Or, in the near future, with some 3.6.3.x build (coming soon).

If, and only if, somebody succeeds to reproduce this present issue, according to Sasha’s original description in comment #0, with such a *current* build, we know that this bug still exists, and can ask the developers to debug and fix it. Else, if several tests show that nobody can still reproduce this issue, we can close this bug report as RESOLVED/WORKSFORME, assuming that this bug was fixed somewhere in the development process.
Comment 26 Dmitry 2012-10-19 08:51:16 UTC
Still exists in 3.6.3.1
Comment 27 Roman Eisele 2012-10-19 09:44:41 UTC
Comment on attachment 68322 [details]
Screenshots for bug 35991, step by step

Obsolete, see comment #22 and comment #25.
Comment 28 Roman Eisele 2012-10-19 09:48:36 UTC
(In reply to comment #26)
> Still exists in 3.6.3.1

Dmitry, thank you very much for your testing results! If this bug is still reproducible in 3.6.3.1, it is really independent from bug 54862.

Can you please explain in some detail (best: step by step!) what you did to reproduce this bug in 3.6.3.1? And on which Platform (Linux, ...) did you reproduce it? Thank you in advance!
Comment 29 Dmitry 2012-10-22 07:11:36 UTC
(In reply to comment #28)
> (In reply to comment #26)
> > Still exists in 3.6.3.1
> 
> Dmitry, thank you very much for your testing results! If this bug is still
> reproducible in 3.6.3.1, it is really independent from bug 54862.
> 
> Can you please explain in some detail (best: step by step!) what you did to
> reproduce this bug in 3.6.3.1? And on which Platform (Linux, ...) did you
> reproduce it? Thank you in advance!

I was able to reproduce it on Ubuntu 12.04 64-bit using the following steps:

- start Writer with new empty document
 - create table with 2 columns and some rows
 - select some cells in one column(important that in one column) and merge them
 - save file in doc format
 - use File->Reload. Cells become unmerged.
Comment 30 Dmitry 2012-10-22 14:19:18 UTC
The bug is really independent from bug 54862 because the reporter stated that he had not problems with 3.5.2. However this bug is reproduced in all 3.x versions.
Comment 31 Roman Eisele 2012-10-23 07:47:12 UTC
(In reply to comment #29)
>  - select some cells in one column (important that in one column)
     and merge them
This is another interesting difference to bug 54862: IIRC, I have seen the latter also with merged cells *across* columns, just like in attachment 68426 [details].
Comment 32 Not Assigned 2012-10-26 15:56:55 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8bd3bf0ff20fc18a0a6358e36b3f8a7e3b34a2bb

Resolves: fdo#35991 rowspan is of size sal_Int32, not size long



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 33 sasha.libreoffice 2012-10-27 09:56:12 UTC
Thanks for fixing this bug
Comment 34 Not Assigned 2012-10-29 17:02:42 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=58ac5a4b305dd74df04df69351fb0e354a2e4b6a&g=libreoffice-3-5

Resolves: fdo#35991 rowspan is of size sal_Int32, not size long


It will be available in LibreOffice 3.5.8.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 35 Not Assigned 2012-10-29 17:03:04 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=efbb187ffcfaac962d6a5efe2a70c2b69d4590b5&g=libreoffice-3-6

Resolves: fdo#35991 rowspan is of size sal_Int32, not size long


It will be available in LibreOffice 3.6.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 36 luksiw 2012-11-18 13:04:15 UTC
Version 4.0.0.0.alpha0+ (Build ID: 04f2f0), works fine.

Steps reproduced:
 - start Writer with new empty document.
 - create table with 2 columnt and some rows
 - select some cells in one column(important that in one column) and merge them
 - save file in doc format

Cells were still merged after reloading.