Resolves: fdo#35991 rowspan is of size sal_Int32, not size long

Change-Id: I347672a2175cf7a0304cf5d6c0f8f3f6afa92cd4